--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,30 @@
 	</head>
 	<body>
 
-		<h1>The beginning of the end of 2014.</h1>
+		<div id="wrapper">
+			<div id="wrapper-inner">
+				<header>
+					<!-- This will move into a .eco view -->
+					<div id="header-inner">
+						<div id="logo" class="passage" data-href="/">
+						</div>
+						<nav id="primary-nav">
+							<div class="nav-item" data-href="/about">About<span></span></div>
+							<div class="nav-item" data-href="/work">Work<span></span></div>
+						</nav>
+						<nav id="secondary-nav">
+							<a href="mailto:hello@legworkstudio.com"></a>
+							<a href="http://goo.gl/2uCNuD" target="_new"></a>
+						</nav>
+					</div>
+				</header>
+				<div id="sections">
+					<section id="about"></section>
+					<section id="landing"></section>
+					<section id="work"></section>
+				</div>
+			</div>
+		</div>
 
 		<!-- build:js scripts/vendor.min.js -->
 		<script src="/vendor/jquery/dist/jquery.js"></script>
