--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
 						<div id="logo" class="passage" data-href="/">
 						</div>
 						<nav id="primary-nav">
-							<div class="nav-item" data-href="/about">About<span></span></div>
-							<div class="nav-item" data-href="/work">Work<span></span></div>
+							<div class="nav-item passage" data-href="/about">About<span></span></div>
+							<div class="nav-item passage" data-href="/work">Work<span></span></div>
 						</nav>
 						<nav id="secondary-nav">
 							<a href="mailto:hello@legworkstudio.com"></a>
@@ -46,6 +46,19 @@
 					<section id="about"></section>
 					<section id="landing"></section>
 					<section id="work"></section>
+				</div>
+			</div>
+		</div>
+
+		<div id="fallback">
+			<div class="table">
+				<div class="table-cell">
+					<div class="content">
+						<div class="content-inner">
+							<p class="weak-copy">Jesus H Christ in a chicken basket,<br>that's an old browser!<br><a href="http://outdatedbrowser.com">UPDATE YOUR LIFE NOW</a></p>
+							<p class="no-js-copy">Seriously, no JavaScript enabled?<br>You're on your own here.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
