add header view, remove temp view

--- a/public/index.html
+++ b/public/index.html
@@ -27,21 +27,7 @@
 
 		<div id="wrapper">
 			<div id="wrapper-inner">
-				<header>
-					<!-- This will move into a .eco view -->
-					<div id="header-inner">
-						<div id="logo" class="passage" data-href="/">
-						</div>
-						<nav id="primary-nav">
-							<div class="nav-item passage" data-href="/about">About<span></span></div>
-							<div class="nav-item passage" data-href="/work">Work<span></span></div>
-						</nav>
-						<nav id="secondary-nav">
-							<a href="mailto:hello@legworkstudio.com"></a>
-							<a href="http://goo.gl/2uCNuD" target="_new"></a>
-						</nav>
-					</div>
-				</header>
+				<header></header>
 				<div id="sections">
 					<section id="about"></section>
 					<section id="landing"></section>
