--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,9 @@
 		<div id="wrapper">
 			<div id="wrapper-inner">
 				<header></header>
-				<div id="sections">
-					<section id="about"></section>
-					<section id="landing"></section>
-					<section id="work"></section>
+				<div id="pages">
+					<div id="pages-inner"></div>
+					<div id="pages-transition"></div>
 				</div>
 			</div>
 		</div>
@@ -52,6 +51,7 @@
 		<!-- build:js scripts/vendor.min.js -->
 		<script src="/vendor/jquery/dist/jquery.js"></script>
 		<script src="/vendor/underscore/underscore.js"></script>
+		<script src="/vendor/pixi/bin/pixi.js"></script>
 		<script src="/vendor/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
 		<script src="/vendor/jquery-easing/jquery.easing.js"></script>
 		<script src="/vendor/greensock/src/minified/TweenLite.min.js"></script>
