--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
 		<script src="/vendor/jquery-easing/jquery.easing.js"></script>
 		<script src="/vendor/greensock/src/minified/TweenLite.min.js"></script>
 		<script src="/vendor/greensock/src/minified/easing/EasePack.min.js"></script>
+		<script src="/vendor/froogaloop/froogaloop.min.js"></script>
 		<!-- endbuild -->
 
 		<!-- build:js scripts/app.min.js -->
