--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata:400,700">
 
-		<!-- build:css styles/style.css -->
+		<!-- build:css /styles/style.css -->
 		<link rel="stylesheet" href="/css/app.css">
 		<!-- endbuild -->
 
-		<!-- build:js scripts/vendor_top.min.js -->
+		<!-- build:js /scripts/vendor_top.min.js -->
 		<script src="/vendor/modernizr/modernizr.js"></script>
 		<!-- endbuild -->
 	</head>
