--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 		<title>Legwork Studio / Creativity. Innovation. DIY Ethic.</title>
 		
-		<meta name="description" content="Hello internet voyager. We are a design studio located in Denver, CO. Got a minute? Click on those blue words up there.">
+		<meta name="description" content="Hello internet voyager. We are a creative production studio located in Denver, CO. Got a minute? Click on those blue words up there.">
 		<meta name="copyright" content="Copyright © Legwork. All Rights Reserved.">
 		<meta name="author" content="Legwork Studio (http://www.legworkstudio.com)">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
