leading slash for gulp

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 
-		<!-- build:js scripts/vendor.min.js -->
+		<!-- build:js /scripts/vendor.min.js -->
 		<script src="/vendor/jquery/dist/jquery.js"></script>
 		<script src="/vendor/underscore/underscore.js"></script>
 		<script src="/vendor/pixi/bin/pixi.js"></script>
@@ -60,7 +60,7 @@
 		<script src="/vendor/froogaloop/froogaloop.min.js"></script>
 		<!-- endbuild -->
 
-		<!-- build:js scripts/app.min.js -->
+		<!-- build:js /scripts/app.min.js -->
 		<script src="/js/app.js"></script>
 		<script src="/js/templates.js"></script>
 		<!-- endbuild -->
