--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		<link rel="stylesheet" href="/css/app.css">
 		<!-- endbuild -->
 
-		<!-- build:js /scripts/vendor_top.min.js -->
+		<!-- build:js1 /scripts/vendor_top.min.js -->
 		<script src="/vendor/modernizr/modernizr.js"></script>
 		<!-- endbuild -->
 	</head>
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 
-		<!-- build:js /scripts/vendor.min.js -->
+		<!-- build:js2 /scripts/vendor.min.js -->
 		<script src="/vendor/jquery/dist/jquery.js"></script>
 		<script src="/vendor/underscore/underscore.js"></script>
 		<script src="/vendor/pixi/bin/pixi.js"></script>
@@ -69,7 +69,7 @@
 		<script src="/vendor/froogaloop/froogaloop.min.js"></script>
 		<!-- endbuild -->
 
-		<!-- build:js /scripts/app.min.js -->
+		<!-- build:js3 /scripts/app.min.js -->
 		<script src="/js/app.js"></script>
 		<script src="/js/templates.js"></script>
 		<!-- endbuild -->
