Changed detail mode transition to opacity for less paints. Neat

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 	<body>
 
 		<div id="wrapper">
+			<div id="ruler-of-the-darkness"></div>
 			<div id="wrapper-inner">
 				<header></header>
 				<div id="pages">
