First pass at final layouts / respondiness.

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
 				<div class="table-cell">
 					<div class="content">
 						<div class="content-inner">
-							<p class="weak-copy">Jesus H Christ in a chicken basket,<br>that's an old browser!<br><a href="http://outdatedbrowser.com">UPDATE YOUR LIFE NOW</a></p>
-							<p class="no-js-copy">Seriously, no JavaScript enabled?<br>You're on your own here.</p>
+							<p class="weak-copy">Accepting incoming fax ...<br>Oh wait, that's your browser!<br><a href="http://outdatedbrowser.com">Better update that rust bucket :)</a></p>
+							<p class="no-js-copy">We write JavaScript for a living.</p>
 						</div>
 					</div>
 				</div>
