--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
 		<script src="/vendor/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
 		<script src="/vendor/jquery-easing/jquery.easing.js"></script>
 		<script src="/vendor/jquery.cookie/jquery.cookie.js"></script>
+		<script src="/vendor/jquery-mousewheel/jquery.mousewheel.js"></script>
 		<script src="/vendor/greensock/src/minified/TweenLite.min.js"></script>
 		<script src="/vendor/greensock/src/minified/easing/EasePack.min.js"></script>
 		<script src="/vendor/froogaloop/froogaloop.min.js"></script>
