Structure for new recognition page.

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
 		<script src="/vendor/jquery/dist/jquery.js"></script>
 		<script src="/vendor/underscore/underscore.js"></script>
 		<script src="/vendor/pixi/bin/pixi.js"></script>
+		<script src="/vendor/matter-js/build/matter-0.8.0.min.js"></script>
 		<script src="/vendor/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
 		<script src="/vendor/jquery-easing/jquery.easing.js"></script>
 		<script src="/vendor/jquery.cookie/jquery.cookie.js"></script>
