--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
 		<script src="/vendor/greensock/src/minified/TweenLite.min.js"></script>
 		<script src="/vendor/greensock/src/minified/easing/EasePack.min.js"></script>
 		<script src="/vendor/froogaloop/froogaloop.min.js"></script>
+		<script src="/vendor/svg4everybody/svg4everybody.min.js"></script>
 		<!-- endbuild -->
 
 		<!-- build:js3 /scripts/app.min.js -->
