Facebook and Twitter cards.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 		<title>Legwork Studio / Creativity. Innovation. DIY Ethic.</title>
-		
+
 		<meta name="description" content="Hello internet voyager. We are a creative production studio located in Denver, CO. Got a minute? Click on those blue words up there.">
 		<meta name="copyright" content="Copyright © Legwork. All Rights Reserved.">
 		<meta name="author" content="Legwork Studio (http://www.legworkstudio.com)">
@@ -32,6 +32,18 @@
 		<meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
 		<meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
 		<meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+
+		<meta property="og:type" content="website">
+		<meta property="og:site_name" content="Legwork">
+		<meta property="og:title" content="Legwork Studio / Creativity. Innovation. DIY Ethic.">
+		<meta property="og:description" content="We are an independent studio from Denver, CO. We create animation and interactive experiences with brands and agencies all over the world.">
+		<meta property="og:url" content="http://legworkstudio.com/">
+		<meta property="og:image" content="http://www.legworkstudio.com/facebot.jpg">
+
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@Legwork" />
+		<meta name="twitter:title" content="Legwork Studio" />
+		<meta name="twitter:description" content="We are an independent studio from Denver, CO. We create animation and interactive experiences with brands and agencies all over the world." />
 
 		<script>
 			var rxaosp = window.navigator.userAgent.match(/Android.*AppleWebKit\/([\d.]+)/);
