updating urls for sharing

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 		<meta property="og:site_name" content="Legwork">
 		<meta property="og:title" content="Legwork Studio / Creativity. Innovation. DIY Ethic.">
 		<meta property="og:description" content="We are an independent studio from Denver, CO. We create animation and interactive experiences with brands and agencies all over the world.">
-		<meta property="og:url" content="http://legworkstudio.com/">
+		<meta property="og:url" content="http://www.legworkstudio.com/">
 		<meta property="og:image" content="http://www.legworkstudio.com/facebot.jpg">
 
 		<meta name="twitter:card" content="summary" />
